File filter ".csv, .txt" file existence test URL parsing improvement